--- a/src/styles/ArticleCard.module.css
+++ b/src/styles/ArticleCard.module.css
@@ -4,6 +4,8 @@
     padding: 16px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s, box-shadow 0.2s;
+    height: 450px;
+    max-height: 450px;
   }
   
   .card:hover {
@@ -14,11 +16,16 @@
   .image {
     width: 100%;
     border-radius: 8px;
+    height: 50%;
   }
   
   .title {
     font-size: 1.2rem;
     margin: 12px 0;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
   }
   
   .source {
@@ -29,6 +36,10 @@
   .description {
     font-size: 1rem;
     color: #333;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
   }
   
   .date {
