--- a/src/styles/SideBar.module.css
+++ b/src/styles/SideBar.module.css
@@ -1,5 +1,5 @@
 .sideBar {
-    width: 250px;
+    width: 240px;
     padding: 16px;
     background-color: #ffffff;
     border-right: 1px solid #e0e0e0;
@@ -7,6 +7,7 @@
     position: fixed; /* Fixed position */
     top: 0;
     left: 0;
+    transition: left 0.3s ease-in-out;
   }
   
   .title {
@@ -74,7 +75,7 @@
   }
   @media (max-width: 768px) {
     .sideBar {
-      position: absolute;
+      position: fixed;
       width: 50%;
       height: 100%;
       z-index: 1000;
