--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,11 @@ body {
     margin: 0;
     padding: 0;
   }
+
+  body::-webkit-scrollbar {
+    display: none;
+  }
+
   
   .header {
     display: flex;
@@ -50,8 +55,12 @@ body {
     margin-left: 270px; 
     /* padding: 16px; */
   }
+  .app::-webkit-scrollbar {
+    display: none;
+  }
   .appClose {
     margin-left: none; 
+    transition: transform 0.5s ease-in-out;
     /* padding: 16px; */
   }
   
