--- a/src/styles/Loader.module.css
+++ b/src/styles/Loader.module.css
@@ -7,7 +7,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    background-color: rgba(255, 255, 255, 0.8); 
+    /* background-color: rgba(255, 255, 255, 0.8);  */
   }
   
   .loader {
