Fixed mobile responsiveness

--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -7,4 +7,14 @@
     bottom: 0;
     width: 100%;
   }
+
+  .footers{
+    background-color: #1A73E8;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+  }
   
