--- a/src/styles.css
+++ b/src/styles.css
@@ -44,6 +44,15 @@ body {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
 
+  .no-news{
+    color: black;
+    text-align: center;
+    padding: 10px;
+    margin-top: 90%;
+    margin-right: -300%;
+    font-size: 20px;
+  }
+
   .logo {
     display: flex;
     flex-direction: row;
@@ -80,6 +89,14 @@ body {
       width: 100%;
       height: auto;
       z-index: 1000;
+    }
+    .no-news{
+      color: black;
+      text-align: center;
+      padding: 10px;
+      margin-top: 50%;
+      margin-right: 10%;
+      font-size: 20px;
     }
   
     .app {
