--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -3,7 +3,7 @@
     color: white;
     text-align: center;
     padding: 10px;
-    /* position: fixed; */
+    position: fixed;
     bottom: 0;
     width: 100%;
   }
