--- a/src/styles/Pagination.module.css
+++ b/src/styles/Pagination.module.css
@@ -4,7 +4,7 @@
     justify-content: center;
     gap: 10px; 
     margin-top: 20px;
-    margin-bottom: 20px;
+    padding-bottom: 10%;
     flex-wrap: wrap;
 }
 
